<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TradeX</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="gridlayout">GRIDLAYOUT</string>
    <string name="from_toss">From - To</string>
    <string name="tech_asokwah">Tech-Asokwah</string>
    <string name="time">time</string>
    <string name="rideid">rideId</string>
    <string name="i_m_a_driver">I\'m a Driver</string>
    <string name="i_m_a_customer">I\'m a Customer</string>
    <string name="distance">distance</string>
    <string name="_0">0</string>
    <string name="call_uber">call Uber</string>
    <string name="uberblack">UberBlack</string>
    <string name="uberxl">UberXl</string>
    <string name="uberx">UberX</string>
    <string name="logouts">logout</string>
    <string name="settingss">Settings</string>
    <string name="historys">history</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="registration">registration</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="confirm">confirm</string>
    <string name="back">back</string>
    <string name="call_bus_driver">Call Bus Driver</string>







    <string name="workings">Working</string>


    <string name="todo">TODO</string>







    <string name="car">Car</string>
    <string name="select_driver_picture">Select Driver picture</string>
    <string name="balance_0">Balance: 0€</string>
    <string name="paypal_email">Paypal Email</string>
    <string name="payout">payout</string>

    <string name="from_tos">From-To</string>
    <string name="baseprice">Baseprice</string>
    <string name="rideprice">Rideprice</string>

    <string name="date">date:</string>
    <string name="_30th_june_2017">30th June 2017</string>
    <string name="_0s">0s</string>
    <string name="_0_usd">0 USD</string>
    <string name="names">name</string>
    <string name="phones">phone</string>
    <string name="pay_here">Pay Here</string>
    <string name="eta">ETA:</string>
    <string name="view_user_s_image">View User\'s image</string>
    <string name="destinations">Destination: --</string>
    <string name="picked_customers">picked customer</string>
    <string name="customer_profile_image">Customer profile image</string>
    <string name="emailss">Email</string>
    <string name="emailsd">Email</string>
    <string name="uberblackS">Uberblack</string>
    <string name="uberblackxiSS">UberblackXI</string>
    <string name="passport_noSS">PASSPORT NO.</string>
    <string name="descriptionSS">DESCRIPTION</string>
    <string name="operationSS">OPERATION</string>
    <string name="residenceSS">RESIDENCE</string>
    <string name="in_order_to_provide_safety_and_security_for_members_of_this_community_we_will_like_you_to_provide_these_additional_informationSS">In order to provide safety and security for members of this community, we will like you to provide these additional information</string>
    <string name="click_button_to_set_office_locationSS">CLICK BUTTON TO SET OFFICE LOCATION</string>
    <string name="set_your_passport_picturess">set your passport picture</string>
    <string name="set_the_operationss">set the operation</string>
    <string name="set_the_descriptionss">set the description</string>
    <string name="set_the_residencess">set the residence</string>
    <string name="call_Trader" />
    <string name="call_trader">call_Trader</string>
    <string name="from_to">From - To</string>
    <string name="distancess">distance</string>
    <string name="datess">date</string>
    <string name="namess">name</string>
    <string name="phoness">phone</string>
    <string name="pay_heress">Pay Here</string>
    <string name="for_users">for user</string>
    <string name="navigation_drawer_things">navigation drawer things</string>
    <string name="my_string_mr_chooser_searching">my @string/mr_chooser_searching</string>
    <string name="zoom_in_content">zoom in content</string>
    <string name="zoom_out">zoom_out</string>
    <string name="logout">logout</string>
    <string name="working">Working</string>
    <string name="settings">Settings</string>
    <string name="history">history</string>
    <string name="picked_customerss">picked customer</string>
    <string name="destinationss">Destination: --</string>
    <string name="customerprofileimage">customerProfileImage</string>
    <string name="picked_customer">picked customer</string>
    <string name="destination">Destination: --</string>
    <string name="accessibility">accessibility</string>
    <string name="changedriveravailable">changedriveravailable</string>
    <string name="search_text">Search text</string>
</resources>
