<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.simcoder.bimbo.HistorySingleActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <fragment
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:id="@+id/map"
            tools:layout="@layout/activity_history_single"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/Productbought"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/from_to"
                    tools:text="Product"

                    android:layout_toStartOf="@+id/Productboughtname"
                    android:layout_toLeftOf="@+id/Productboughtname" />

                <TextView
                    android:id="@+id/Productboughtname"
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/tech_asokwah"
                    tools:text="Rc revolver"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>
            <!--HOW TO SHOW THE PLACES BETWEEN THEM -->

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/rideDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="@string/distance"
                android:layout_toStartOf="@+id/rideDistanceShow"
                android:layout_toLeftOf="@+id/rideDistanceShow"/>

                <TextView
                    android:id="@+id/rideDistanceShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="66dp"
                    android:text="@string/_0"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="66dp"
                    android:layout_toStartOf="@+id/rideDate"
                    android:layout_toLeftOf="@+id/rideDate"

                    />

                <TextView
                    android:id="@+id/rideDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="115dp"
                    android:text="@string/date"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="115dp"
                    android:layout_toStartOf="@+id/rideDateShow"
                    android:layout_toLeftOf="@+id/rideDateShow"


                    />

                <TextView
                    android:id="@+id/rideDateShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/_30th_june_2017"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

             <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                 <TextView
                     android:id="@+id/ExpectedarrivalTimeShown"
                     android:layout_width="10dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginEnd="22dp"
                     android:layout_marginLeft="45dp"
                     android:layout_marginRight="22dp"
                     android:layout_marginStart="45dp"
                     android:layout_toLeftOf="@+id/FromTo"
                     android:layout_toStartOf="@+id/FromTo"
                     android:text="@string/_0s"
                     />

                 <TextView
                     android:id="@+id/FromTo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginStart="77dp"
                     android:text="@string/from_tos"
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="77dp"
                     android:layout_toStartOf="@+id/FromToWhere"
                     android:layout_toLeftOf="@+id/FromToWhere"
                     />

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginLeft="77dp"
                     android:text="@string/from_tos"
                     android:id="@+id/FromToWhere"
                     android:layout_marginStart="77dp"


                     />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/Baseprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/baseprice"
                    android:layout_alignParentLeft="true"
                    android:layout_toStartOf="@+id/RidepriceShown"
                    android:layout_toLeftOf="@+id/RidepriceShown"
                    />

                <TextView
                    android:id="@+id/RidepriceShown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="13dp"
                    android:text="@string/_0_usd"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="13dp"
                    android:layout_toStartOf="@+id/Rideprice"
                    android:layout_toLeftOf="@+id/Rideprice"
                    />

                <TextView
                    android:id="@+id/Rideprice"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="84dp"
                    android:text="@string/rideprice"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="84dp"
                    android:layout_toStartOf="@+id/BasepriceShown"
                    android:layout_toLeftOf="@+id/BasepriceShown"
                    />

                <TextView
                    android:id="@+id/BasepriceShown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="76dp"
                    android:text="@string/_0_usd"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="76dp" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/userImage"
                android:src="@mipmap/ic_default_user"
                android:contentDescription="@string/view_user_s_image" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/names"
                    android:layout_marginBottom="20sp"
                    android:id="@+id/userName"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phones"
                    android:layout_marginBottom="20sp"
                    android:id="@+id/userPhone"/>
            </LinearLayout>
        </LinearLayout>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize="1"
            android:visibility="gone"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pay"
            android:text="@string/pay_here"
            android:visibility="gone"
            android:enabled="false"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
